# hidapitester

./: .cirrus.yml  .gitignore  CMakeLists.txt  Makefile  README.md  hidapitester.c
.github/workflows/: linux.yml  macos.yml  raspberrypi.yml  windows.yml
ProMicroRawHID/: ProMicroRawHID.ino
TeensyRawHid/: TeensyRawHid.ino
docs/: codesigning-macos.md  screencast1.cast  using-hidaapitester-blink1.md
hid_generic_trinketm0/: descriptors.h  hid_generic_trinketm0.ino
hidtest_tinyusb/: descriptors.h  hid_settings.h  hidtest_tinyusb.ino
hidtest_tinyusb_static/: descriptors.h
test_hardware/ProMicroRawHID/: ProMicroRawHID.ino
test_hardware/TeensyRawHid/: TeensyRawHid.ino
test_hardware/hidtest_tinyusb/: board_config.h  board_setup.h  config.h  descriptors.h  hid_settings.h  hidtest_tinyusb.ino
test_hardware/hidtest_tinyusb_static/: descriptors.h  hidtest_tinyusb_static.ino
tests/: test_hardware.sh  test_nohardware.sh
tinyusb_teensyrawhid/: descriptors.h  tinyusb_teensyrawhid.ino
tinyusb_teensyrawhid_multiusage/: descriptors.h  tinyusb_teensyrawhid_multiusage.ino
